# PA-LCP-Tool

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0001_initial_schema.py  20260623_0002_va_pricing.py  20260623_0003_va_setting.py
docs/: DATA_SCHEMA.md  DEFENSIBILITY.md  DEPLOY_RAILWAY.md  METHODOLOGY.md
docs/superpowers/plans/: 2026-06-23-va-ucr-pricing-preload.md
docs/superpowers/specs/: 2026-06-23-va-charge-engine-design.md  2026-06-23-va-ucr-pricing-and-preload-design.md
examples/: README.md  sample_life_care_plan.xlsx
scripts/: fetch_va_charges.py  start.sh
src/palcp/: __init__.py  cli.py  config.py  models.py  validate.py
src/palcp/catalog/: __init__.py
src/palcp/data/: common_items.yaml  sample_assumptions.yaml  sample_plan_items.csv  sample_pricing.csv  va_charges_seed.csv
src/palcp/data/templates/: assumptions.template.yaml  life_table.template.csv  plan_items.template.csv  pricing.template.csv
src/palcp/economics/: __init__.py  lifetable.py  projection.py
src/palcp/pricing/: __init__.py  growth_map.py  loaders.py  lookup.py  schema.py  va.py  va_charges.py  va_ingest.py
src/palcp/workbook/: __init__.py  builder.py  content.py  styles.py
src/palcp_web/: __init__.py  config.py  db.py  forms.py  main.py  models.py  security.py  services.py  templating.py  va_pricing.py
src/palcp_web/routers/: auth.py  cases.py  catalog.py  items.py  lookup.py  pricing.py  rates.py  reports.py
src/palcp_web/static/: styles.css
src/palcp_web/templates/: base.html  dashboard.html  error.html
src/palcp_web/templates/auth/: login.html  register.html
src/palcp_web/templates/cases/: _item_autofill.html  _items_section.html  _validation.html  detail.html  form.html  history.html  item_form.html
src/palcp_web/templates/catalog/: list.html
src/palcp_web/templates/pricing/: detail.html  form.html  (+1 more)
tests/: conftest.py  test_apply_pricing.py  test_catalog.py  test_config_and_workbook.py  test_geo_resolution.py  test_growth_map.py  test_pricing.py  test_projection.py  test_va_charges.py  test_va_ingest.py  test_va_loader.py  test_validate.py  test_web.py  test_web_va_engine.py  test_web_va_pricing.py
(+2 files in other folders)
